[package]
name = "anchor-game-ticket"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_game_ticket"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
#solana-program = "1.5.11"
#solana-sdk = "1.5.11"
#spl-memo = "3.0.1"